2006-07-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex-bar.el (TeX-bar-TeX-buttons, TeX-bar-LaTeX-buttons): Improve
	wording.

	* doc/changes.texi: Add bug fixes.  Add TeX tool bar.

	* doc/auctex.texi (Running TeX and friends): Add
	TeX-enable-toolbar.

	* tex-bar.el: Copy of tool bar stuff from LaTeX-*.
	(TeX-bar-TeX-buttons, TeX-bar-TeX-all-button-alists)
	(TeX-bar-TeX-button-alist): New variables.
	(TeX-bar-TeX-buttons, TeX-install-toolbar): New funtions.
	(TeX-tool-bar-button-definitions): New custom group

	* tex.el (TeX-enable-toolbar): New variable.
	(TeX-maybe-install-toolbar): New function.
	(TeX-plain-tex-mode): Add `TeX-maybe-install-toolbar'.

2006-07-27  David Kastrup  <dak@gnu.org>

	* doc/wininstall.texi: Add explanation of how to augment `PATH'.

	* doc/todo.texi (Mid-term Goals): Typo.

2006-07-25  David Kastrup  <dak@gnu.org>

	* style/doc.el ("doc"): Add macrocode and macrocode* to
	indentation-neutral environment list.

	* latex.el (LaTeX-insert-environment): Leave mark at start of
	content when inserting around active region.

2006-07-11  David Kastrup  <dak@gnu.org>

	* latex.el (LaTeX-font-list): Add `\mathbb' on C-c C-f C-s.

2006-07-25  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Don't match groups
	spanning more than one line in order to avoid visually wrong
	indentation in subsequent lines.
	(font-latex-match-quotation): Do not match escaped quotation
	marks.

2006-07-23  Ralf Angeli  <angeli@caeruleus.net>

	* bib-cite.el, tex-mik.el, doc/changes.texi, doc/history.texi,
	doc/wininstall.texi: Fix spelling of MiKTeX.

2006-07-21  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Fix last check-in.

2006-07-18  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Apply subscript and
	superscript highlighting only once in order to prevent the font
	size becoming too small.

2006-07-15  Ralf Angeli  <angeli@caeruleus.net>
