@@ -1,3 +1,9 @@
+2006-08-02  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* tex-bar.el (TeX-bar-TeX-button-alist, TeX-bar-LaTeX-button-alist):
+	Make `file' invisible in TeX-PDF-mode.  Add clean.
+	(TeX-bar-TeX-buttons, TeX-bar-LaTeX-buttons): Improve custom type.
+
 2006-07-27  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* tex-bar.el (TeX-bar-TeX-buttons, TeX-bar-LaTeX-buttons): Improve
